// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#createClusterImageRelationships should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Cluster",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/regions/us-central1/clusters/cluster-6495",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "clusterName": "cluster-6495",
            "clusterUuid": "ef6307df-d7f4-4b6d-9d12-bf9d481f6d72",
            "config": Object {
              "configBucket": "dataproc-staging-us-central1-167984947943-okmnuod7",
              "encryptionConfig": Object {},
              "endpointConfig": Object {},
              "gceClusterConfig": Object {
                "networkUri": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/networks/default",
                "serviceAccountScopes": Array [
                  "https://www.googleapis.com/auth/bigquery",
                  "https://www.googleapis.com/auth/bigtable.admin.table",
                  "https://www.googleapis.com/auth/bigtable.data",
                  "https://www.googleapis.com/auth/cloud.useraccounts.readonly",
                  "https://www.googleapis.com/auth/devstorage.full_control",
                  "https://www.googleapis.com/auth/devstorage.read_write",
                  "https://www.googleapis.com/auth/logging.write",
                ],
                "shieldedInstanceConfig": Object {},
                "zoneUri": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/zones/us-central1-b",
              },
              "masterConfig": Object {
                "diskConfig": Object {
                  "bootDiskSizeGb": 500,
                  "bootDiskType": "pd-standard",
                },
                "imageUri": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/dataproc-image-sample",
                "instanceNames": Array [
                  "cluster-6495-m",
                ],
                "machineTypeUri": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/zones/us-central1-b/machineTypes/n1-standard-4",
                "minCpuPlatform": "AUTOMATIC",
                "numInstances": 1,
                "preemptibility": "NON_PREEMPTIBLE",
              },
              "securityConfig": Object {
                "kerberosConfig": Object {},
              },
              "softwareConfig": Object {
                "imageVersion": "2.0.14-debian10",
                "properties": Object {
                  "capacity-scheduler:yarn.scheduler.capacity.root.default.ordering-policy": "fair",
                  "core:fs.gs.block.size": "134217728",
                  "core:fs.gs.metadata.cache.enable": "false",
                  "core:hadoop.ssl.enabled.protocols": "TLSv1,TLSv1.1,TLSv1.2",
                  "distcp:mapreduce.map.java.opts": "-Xmx768m",
                  "distcp:mapreduce.map.memory.mb": "1024",
                  "distcp:mapreduce.reduce.java.opts": "-Xmx768m",
                  "distcp:mapreduce.reduce.memory.mb": "1024",
                  "hadoop-env:HADOOP_DATANODE_OPTS": "-Xmx512m",
                  "hdfs:dfs.datanode.address": "0.0.0.0:9866",
                  "hdfs:dfs.datanode.http.address": "0.0.0.0:9864",
                  "hdfs:dfs.datanode.https.address": "0.0.0.0:9865",
                  "hdfs:dfs.datanode.ipc.address": "0.0.0.0:9867",
                  "hdfs:dfs.namenode.handler.count": "20",
                  "hdfs:dfs.namenode.http-address": "0.0.0.0:9870",
                  "hdfs:dfs.namenode.https-address": "0.0.0.0:9871",
                  "hdfs:dfs.namenode.lifeline.rpc-address": "cluster-6495-m:8050",
                  "hdfs:dfs.namenode.secondary.http-address": "0.0.0.0:9868",
                  "hdfs:dfs.namenode.secondary.https-address": "0.0.0.0:9869",
                  "hdfs:dfs.namenode.service.handler.count": "10",
                  "hdfs:dfs.namenode.servicerpc-address": "cluster-6495-m:8051",
                  "hive:hive.fetch.task.conversion": "none",
                  "mapred-env:HADOOP_JOB_HISTORYSERVER_HEAPSIZE": "3840",
                  "mapred:mapreduce.job.maps": "21",
                  "mapred:mapreduce.job.reduce.slowstart.completedmaps": "0.95",
                  "mapred:mapreduce.job.reduces": "7",
                  "mapred:mapreduce.jobhistory.recovery.store.class": "org.apache.hadoop.mapreduce.v2.hs.HistoryServerLeveldbStateStoreService",
                  "mapred:mapreduce.map.cpu.vcores": "1",
                  "mapred:mapreduce.map.java.opts": "-Xmx2524m",
                  "mapred:mapreduce.map.memory.mb": "3156",
                  "mapred:mapreduce.reduce.cpu.vcores": "1",
                  "mapred:mapreduce.reduce.java.opts": "-Xmx2524m",
                  "mapred:mapreduce.reduce.memory.mb": "3156",
                  "mapred:mapreduce.task.io.sort.mb": "256",
                  "mapred:yarn.app.mapreduce.am.command-opts": "-Xmx2524m",
                  "mapred:yarn.app.mapreduce.am.resource.cpu-vcores": "1",
                  "mapred:yarn.app.mapreduce.am.resource.mb": "3156",
                  "spark-env:SPARK_DAEMON_MEMORY": "3840m",
                  "spark:spark.driver.maxResultSize": "1920m",
                  "spark:spark.driver.memory": "3840m",
                  "spark:spark.executor.cores": "2",
                  "spark:spark.executor.instances": "2",
                  "spark:spark.executor.memory": "5739m",
                  "spark:spark.executorEnv.OPENBLAS_NUM_THREADS": "1",
                  "spark:spark.scheduler.mode": "FAIR",
                  "spark:spark.sql.cbo.enabled": "true",
                  "spark:spark.ui.port": "0",
                  "spark:spark.yarn.am.memory": "640m",
                  "yarn-env:YARN_NODEMANAGER_HEAPSIZE": "1536",
                  "yarn-env:YARN_RESOURCEMANAGER_HEAPSIZE": "3840",
                  "yarn-env:YARN_TIMELINESERVER_HEAPSIZE": "3840",
                  "yarn:yarn.nodemanager.address": "0.0.0.0:8026",
                  "yarn:yarn.nodemanager.resource.cpu-vcores": "4",
                  "yarn:yarn.nodemanager.resource.memory-mb": "12624",
                  "yarn:yarn.resourcemanager.nodemanager-graceful-decommission-timeout-secs": "86400",
                  "yarn:yarn.scheduler.maximum-allocation-mb": "12624",
                  "yarn:yarn.scheduler.minimum-allocation-mb": "1",
                },
              },
              "tempBucket": "dataproc-temp-us-central1-167984947943-c8nlqeyo",
              "workerConfig": Object {
                "diskConfig": Object {
                  "bootDiskSizeGb": 500,
                  "bootDiskType": "pd-standard",
                },
                "imageUri": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/dataproc-image-sample",
                "instanceNames": Array [
                  "cluster-6495-w-0",
                  "cluster-6495-w-1",
                ],
                "machineTypeUri": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/zones/us-central1-b/machineTypes/n1-standard-4",
                "minCpuPlatform": "AUTOMATIC",
                "numInstances": 2,
                "preemptibility": "NON_PREEMPTIBLE",
              },
            },
            "labels": Object {
              "goog-dataproc-cluster-name": "cluster-6495",
              "goog-dataproc-cluster-uuid": "ef6307df-d7f4-4b6d-9d12-bf9d481f6d72",
              "goog-dataproc-location": "us-central1",
            },
            "metrics": Object {
              "hdfsMetrics": Object {
                "dfs-blocks-corrupt": "0",
                "dfs-blocks-missing": "0",
                "dfs-blocks-missing-repl-one": "0",
                "dfs-blocks-pending-deletion": "0",
                "dfs-blocks-under-replication": "0",
                "dfs-capacity-present": "988020621312",
                "dfs-capacity-remaining": "988020563968",
                "dfs-capacity-total": "1056489095168",
                "dfs-capacity-used": "57344",
                "dfs-nodes-decommissioned": "0",
                "dfs-nodes-decommissioning": "0",
                "dfs-nodes-running": "2",
              },
              "yarnMetrics": Object {
                "yarn-apps-completed": "0",
                "yarn-apps-failed": "0",
                "yarn-apps-killed": "0",
                "yarn-apps-pending": "0",
                "yarn-apps-running": "0",
                "yarn-apps-submitted": "0",
                "yarn-containers-allocated": "0",
                "yarn-containers-pending": "0",
                "yarn-containers-reserved": "0",
                "yarn-memory-mb-allocated": "0",
                "yarn-memory-mb-available": "25248",
                "yarn-memory-mb-pending": "0",
                "yarn-memory-mb-reserved": "0",
                "yarn-memory-mb-total": "25248",
                "yarn-nodes-active": "2",
                "yarn-nodes-decommissioned": "0",
                "yarn-nodes-lost": "0",
                "yarn-nodes-rebooted": "0",
                "yarn-nodes-unhealthy": "0",
                "yarn-vcores-allocated": "0",
                "yarn-vcores-available": "8",
                "yarn-vcores-pending": "0",
                "yarn-vcores-reserved": "0",
                "yarn-vcores-total": "8",
              },
            },
            "projectId": "j1-gc-integration-dev-v3",
            "status": Object {
              "state": "RUNNING",
              "stateStartTime": "2021-08-13T10:24:53.114077Z",
            },
            "statusHistory": Array [
              Object {
                "state": "CREATING",
                "stateStartTime": "2021-08-13T10:22:16.636450Z",
              },
            ],
          },
        },
      ],
      "_type": "google_dataproc_cluster",
      "active": true,
      "configBucket": "dataproc-staging-us-central1-167984947943-okmnuod7",
      "createdOn": undefined,
      "crossRealmTrustAdminServer": undefined,
      "crossRealmTrustKdc": undefined,
      "crossRealmTrustRealm": undefined,
      "crossRealmTrustSharedPasswordUri": undefined,
      "displayName": "cluster-6495",
      "enableKerberos": undefined,
      "encrypted": true,
      "id": "ef6307df-d7f4-4b6d-9d12-bf9d481f6d72",
      "kdcDbKeyUri": undefined,
      "keyPasswordUri": undefined,
      "keystorePasswordUri": undefined,
      "keystoreUri": undefined,
      "kmsKeyName": undefined,
      "kmsKeyUri": undefined,
      "masterConfigImageUri": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/dataproc-image-sample",
      "masterConfigMachineTypeUri": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/zones/us-central1-b/machineTypes/n1-standard-4",
      "masterConfigMinCpuPlatform": "AUTOMATIC",
      "masterConfigNumInstances": 1,
      "masterConfigPreemptibility": "NON_PREEMPTIBLE",
      "name": "cluster-6495",
      "networkUri": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/networks/default",
      "realm": undefined,
      "rootPrincipalPasswordUri": undefined,
      "softwareConfigImageVersion": "2.0.14-debian10",
      "status": "RUNNING",
      "tag.goog-dataproc-cluster-name": "cluster-6495",
      "tag.goog-dataproc-cluster-uuid": "ef6307df-d7f4-4b6d-9d12-bf9d481f6d72",
      "tag.goog-dataproc-location": "us-central1",
      "tempBucket": "dataproc-temp-us-central1-167984947943-c8nlqeyo",
      "tgtLifetimeHours": undefined,
      "truststorePasswordUri": undefined,
      "truststoreUri": undefined,
      "webLink": "https://console.cloud.google.com/dataproc/clusters/cluster-6495/monitoring?region=us-central1&project=j1-gc-integration-dev-v3",
      "workerConfigImageUri": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/dataproc-image-sample",
      "workerConfigMachineTypeUri": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/zones/us-central1-b/machineTypes/n1-standard-4",
      "workerConfigMinCpuPlatform": "AUTOMATIC",
      "workerConfigNumInstances": 2,
      "workerConfigPreemptibility": "NON_PREEMPTIBLE",
      "zoneUri": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/zones/us-central1-b",
    },
    Object {
      "_class": Array [
        "Image",
      ],
      "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/dataproc-image-sample",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "archiveSizeBytes": "8766305344",
            "creationTimestamp": "2021-08-13T03:17:20.783-07:00",
            "diskSizeGb": "50",
            "family": "dataproc-custom-image",
            "guestOsFeatures": Array [
              Object {
                "type": "UEFI_COMPATIBLE",
              },
              Object {
                "type": "VIRTIO_SCSI_MULTIQUEUE",
              },
            ],
            "id": "4458256484022351967",
            "kind": "compute#image",
            "labelFingerprint": "Xy9pnDhjprA=",
            "labels": Object {
              "goog-dataproc-version": "2-0-14-debian10",
            },
            "licenseCodes": Array [
              "1001006",
            ],
            "licenses": Array [
              "https://www.googleapis.com/compute/v1/projects/cloud-dataproc/global/licenses/dataproc",
            ],
            "name": "dataproc-image-sample",
            "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/dataproc-image-sample",
            "sourceDisk": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/zones/us-central1-a/disks/dataproc-image-sample-install",
            "sourceDiskId": "4031200068940593678",
            "sourceType": "RAW",
            "status": "READY",
            "storageLocations": Array [
              "us",
            ],
          },
        },
      ],
      "_type": "google_compute_image",
      "active": undefined,
      "archivedSizeBytes": "8766305344",
      "createdOn": 1628849840783,
      "deprecated": false,
      "deprecationState": undefined,
      "description": undefined,
      "diskSizeGb": "50",
      "displayName": "dataproc-image-sample",
      "family": "dataproc-custom-image",
      "guestOsFeatures": Array [
        "UEFI_COMPATIBLE",
        "VIRTIO_SCSI_MULTIQUEUE",
      ],
      "id": "4458256484022351967",
      "kind": "compute#image",
      "labelFingerprint": "Xy9pnDhjprA=",
      "licenseCodes": Array [
        "1001006",
      ],
      "licenses": Array [
        "https://www.googleapis.com/compute/v1/projects/cloud-dataproc/global/licenses/dataproc",
      ],
      "name": "dataproc-image-sample",
      "public": false,
      "rawDisk.containerType": undefined,
      "rawDisk.sha1Checksum": undefined,
      "rawDisk.source": undefined,
      "sourceDisk": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/zones/us-central1-a/disks/dataproc-image-sample-install",
      "sourceDiskId": "4031200068940593678",
      "sourceImage": undefined,
      "sourceImageId": undefined,
      "sourceSnapshot": undefined,
      "sourceSnapshotId": undefined,
      "sourceType": "RAW",
      "status": "READY",
      "storageLocations": Array [
        "us",
      ],
      "tag.goog-dataproc-version": "2-0-14-debian10",
    },
    Object {
      "_class": Array [
        "Image",
      ],
      "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/example-disk-image",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "archiveSizeBytes": "677588608",
            "creationTimestamp": "2021-05-31T09:26:00.641-07:00",
            "diskSizeGb": "10",
            "guestOsFeatures": Array [
              Object {
                "type": "VIRTIO_SCSI_MULTIQUEUE",
              },
            ],
            "id": "3455131146476105975",
            "kind": "compute#image",
            "labelFingerprint": "42WmSpB8rSM=",
            "licenseCodes": Array [
              "1000205",
            ],
            "licenses": Array [
              "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
            ],
            "name": "example-disk-image",
            "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/example-disk-image",
            "sourceDisk": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/zones/us-central1-a/disks/example-disk",
            "sourceDiskId": "7109116204666106089",
            "sourceType": "RAW",
            "status": "READY",
            "storageLocations": Array [
              "us",
            ],
          },
        },
      ],
      "_type": "google_compute_image",
      "active": undefined,
      "archivedSizeBytes": "677588608",
      "createdOn": 1622478360641,
      "deprecated": false,
      "deprecationState": undefined,
      "description": undefined,
      "diskSizeGb": "10",
      "displayName": "example-disk-image",
      "family": undefined,
      "guestOsFeatures": Array [
        "VIRTIO_SCSI_MULTIQUEUE",
      ],
      "id": "3455131146476105975",
      "kind": "compute#image",
      "labelFingerprint": "42WmSpB8rSM=",
      "licenseCodes": Array [
        "1000205",
      ],
      "licenses": Array [
        "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
      ],
      "name": "example-disk-image",
      "public": false,
      "rawDisk.containerType": undefined,
      "rawDisk.sha1Checksum": undefined,
      "rawDisk.source": undefined,
      "sourceDisk": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/zones/us-central1-a/disks/example-disk",
      "sourceDiskId": "7109116204666106089",
      "sourceImage": undefined,
      "sourceImageId": undefined,
      "sourceSnapshot": undefined,
      "sourceSnapshotId": undefined,
      "sourceType": "RAW",
      "status": "READY",
      "storageLocations": Array [
        "us",
      ],
    },
    Object {
      "_class": Array [
        "Image",
      ],
      "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/example-snapshot-image",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "archiveSizeBytes": "677588608",
            "creationTimestamp": "2021-05-31T09:26:31.988-07:00",
            "diskSizeGb": "10",
            "guestOsFeatures": Array [
              Object {
                "type": "VIRTIO_SCSI_MULTIQUEUE",
              },
            ],
            "id": "6763584320471347416",
            "kind": "compute#image",
            "labelFingerprint": "42WmSpB8rSM=",
            "licenseCodes": Array [
              "1000205",
            ],
            "licenses": Array [
              "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
            ],
            "name": "example-snapshot-image",
            "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/example-snapshot-image",
            "sourceSnapshot": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/snapshots/example-snapshot",
            "sourceSnapshotId": "5395528080101519607",
            "sourceType": "RAW",
            "status": "READY",
            "storageLocations": Array [
              "us",
            ],
          },
        },
      ],
      "_type": "google_compute_image",
      "active": undefined,
      "archivedSizeBytes": "677588608",
      "createdOn": 1622478391988,
      "deprecated": false,
      "deprecationState": undefined,
      "description": undefined,
      "diskSizeGb": "10",
      "displayName": "example-snapshot-image",
      "family": undefined,
      "guestOsFeatures": Array [
        "VIRTIO_SCSI_MULTIQUEUE",
      ],
      "id": "6763584320471347416",
      "kind": "compute#image",
      "labelFingerprint": "42WmSpB8rSM=",
      "licenseCodes": Array [
        "1000205",
      ],
      "licenses": Array [
        "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
      ],
      "name": "example-snapshot-image",
      "public": false,
      "rawDisk.containerType": undefined,
      "rawDisk.sha1Checksum": undefined,
      "rawDisk.source": undefined,
      "sourceDisk": undefined,
      "sourceDiskId": undefined,
      "sourceImage": undefined,
      "sourceImageId": undefined,
      "sourceSnapshot": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/snapshots/example-snapshot",
      "sourceSnapshotId": "5395528080101519607",
      "sourceType": "RAW",
      "status": "READY",
      "storageLocations": Array [
        "us",
      ],
    },
    Object {
      "_class": Array [
        "Image",
      ],
      "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/example-source-image",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "archiveSizeBytes": "708151296",
            "creationTimestamp": "2021-07-23T09:30:21.415-07:00",
            "diskSizeGb": "10",
            "guestOsFeatures": Array [
              Object {
                "type": "VIRTIO_SCSI_MULTIQUEUE",
              },
            ],
            "id": "7307438273773129842",
            "kind": "compute#image",
            "labelFingerprint": "42WmSpB8rSM=",
            "licenseCodes": Array [
              "1000205",
            ],
            "licenses": Array [
              "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
            ],
            "name": "example-source-image",
            "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/example-source-image",
            "sourceImage": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20210721",
            "sourceImageId": "3196446524667459422",
            "sourceType": "RAW",
            "status": "READY",
            "storageLocations": Array [
              "us",
            ],
          },
        },
      ],
      "_type": "google_compute_image",
      "active": undefined,
      "archivedSizeBytes": "708151296",
      "createdOn": 1627057821415,
      "deprecated": false,
      "deprecationState": undefined,
      "description": undefined,
      "diskSizeGb": "10",
      "displayName": "example-source-image",
      "family": undefined,
      "guestOsFeatures": Array [
        "VIRTIO_SCSI_MULTIQUEUE",
      ],
      "id": "7307438273773129842",
      "kind": "compute#image",
      "labelFingerprint": "42WmSpB8rSM=",
      "licenseCodes": Array [
        "1000205",
      ],
      "licenses": Array [
        "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
      ],
      "name": "example-source-image",
      "public": false,
      "rawDisk.containerType": undefined,
      "rawDisk.sha1Checksum": undefined,
      "rawDisk.source": undefined,
      "sourceDisk": undefined,
      "sourceDiskId": undefined,
      "sourceImage": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20210721",
      "sourceImageId": "3196446524667459422",
      "sourceSnapshot": undefined,
      "sourceSnapshotId": undefined,
      "sourceType": "RAW",
      "status": "READY",
      "storageLocations": Array [
        "us",
      ],
    },
    Object {
      "_class": Array [
        "Image",
      ],
      "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/image-1",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "archiveSizeBytes": "400770432",
            "creationTimestamp": "2021-06-11T03:52:48.626-07:00",
            "diskSizeGb": "10",
            "guestOsFeatures": Array [
              Object {
                "type": "UEFI_COMPATIBLE",
              },
              Object {
                "type": "VIRTIO_SCSI_MULTIQUEUE",
              },
            ],
            "id": "1190666273104526959",
            "kind": "compute#image",
            "labelFingerprint": "42WmSpB8rSM=",
            "licenseCodes": Array [
              "5543610867827062957",
            ],
            "licenses": Array [
              "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-10-buster",
            ],
            "name": "image-1",
            "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/image-1",
            "sourceDisk": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/zones/us-central1-a/disks/j1-test",
            "sourceDiskId": "1753296839872774204",
            "sourceType": "RAW",
            "status": "READY",
            "storageLocations": Array [
              "us",
            ],
          },
        },
      ],
      "_type": "google_compute_image",
      "active": undefined,
      "archivedSizeBytes": "400770432",
      "createdOn": 1623408768626,
      "deprecated": false,
      "deprecationState": undefined,
      "description": undefined,
      "diskSizeGb": "10",
      "displayName": "image-1",
      "family": undefined,
      "guestOsFeatures": Array [
        "UEFI_COMPATIBLE",
        "VIRTIO_SCSI_MULTIQUEUE",
      ],
      "id": "1190666273104526959",
      "kind": "compute#image",
      "labelFingerprint": "42WmSpB8rSM=",
      "licenseCodes": Array [
        "5543610867827062957",
      ],
      "licenses": Array [
        "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-10-buster",
      ],
      "name": "image-1",
      "public": false,
      "rawDisk.containerType": undefined,
      "rawDisk.sha1Checksum": undefined,
      "rawDisk.source": undefined,
      "sourceDisk": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/zones/us-central1-a/disks/j1-test",
      "sourceDiskId": "1753296839872774204",
      "sourceImage": undefined,
      "sourceImageId": undefined,
      "sourceSnapshot": undefined,
      "sourceSnapshotId": undefined,
      "sourceType": "RAW",
      "status": "READY",
      "storageLocations": Array [
        "us",
      ],
    },
    Object {
      "_class": Array [
        "Image",
      ],
      "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/j1-image2",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "archiveSizeBytes": "400770432",
            "creationTimestamp": "2021-06-11T03:58:33.517-07:00",
            "diskSizeGb": "10",
            "guestOsFeatures": Array [
              Object {
                "type": "UEFI_COMPATIBLE",
              },
              Object {
                "type": "VIRTIO_SCSI_MULTIQUEUE",
              },
            ],
            "id": "7233253107557138230",
            "kind": "compute#image",
            "labelFingerprint": "ZK_kFCMOrH8=",
            "labels": Object {
              "copiedimage": "1",
            },
            "licenseCodes": Array [
              "5543610867827062957",
            ],
            "licenses": Array [
              "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-10-buster",
            ],
            "name": "j1-image2",
            "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/j1-image2",
            "sourceImage": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/image-1",
            "sourceImageId": "1190666273104526959",
            "sourceType": "RAW",
            "status": "READY",
            "storageLocations": Array [
              "us",
            ],
          },
        },
      ],
      "_type": "google_compute_image",
      "active": undefined,
      "archivedSizeBytes": "400770432",
      "createdOn": 1623409113517,
      "deprecated": false,
      "deprecationState": undefined,
      "description": undefined,
      "diskSizeGb": "10",
      "displayName": "j1-image2",
      "family": undefined,
      "guestOsFeatures": Array [
        "UEFI_COMPATIBLE",
        "VIRTIO_SCSI_MULTIQUEUE",
      ],
      "id": "7233253107557138230",
      "kind": "compute#image",
      "labelFingerprint": "ZK_kFCMOrH8=",
      "licenseCodes": Array [
        "5543610867827062957",
      ],
      "licenses": Array [
        "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-10-buster",
      ],
      "name": "j1-image2",
      "public": false,
      "rawDisk.containerType": undefined,
      "rawDisk.sha1Checksum": undefined,
      "rawDisk.source": undefined,
      "sourceDisk": undefined,
      "sourceDiskId": undefined,
      "sourceImage": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/image-1",
      "sourceImageId": "1190666273104526959",
      "sourceSnapshot": undefined,
      "sourceSnapshotId": undefined,
      "sourceType": "RAW",
      "status": "READY",
      "storageLocations": Array [
        "us",
      ],
      "tag.copiedimage": 1,
    },
    Object {
      "_class": Array [
        "Image",
      ],
      "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/j1-image3",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "archiveSizeBytes": "400801216",
            "creationTimestamp": "2021-06-11T04:02:18.774-07:00",
            "description": "From j1-snapshot",
            "diskSizeGb": "10",
            "guestOsFeatures": Array [
              Object {
                "type": "UEFI_COMPATIBLE",
              },
              Object {
                "type": "VIRTIO_SCSI_MULTIQUEUE",
              },
            ],
            "id": "282817071286254677",
            "kind": "compute#image",
            "labelFingerprint": "42WmSpB8rSM=",
            "licenseCodes": Array [
              "5543610867827062957",
            ],
            "licenses": Array [
              "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-10-buster",
            ],
            "name": "j1-image3",
            "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/j1-image3",
            "sourceSnapshot": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/snapshots/j1-snapshot",
            "sourceSnapshotId": "3150235893494643858",
            "sourceType": "RAW",
            "status": "READY",
            "storageLocations": Array [
              "us",
            ],
          },
        },
      ],
      "_type": "google_compute_image",
      "active": undefined,
      "archivedSizeBytes": "400801216",
      "createdOn": 1623409338774,
      "deprecated": false,
      "deprecationState": undefined,
      "description": "From j1-snapshot",
      "diskSizeGb": "10",
      "displayName": "j1-image3",
      "family": undefined,
      "guestOsFeatures": Array [
        "UEFI_COMPATIBLE",
        "VIRTIO_SCSI_MULTIQUEUE",
      ],
      "id": "282817071286254677",
      "kind": "compute#image",
      "labelFingerprint": "42WmSpB8rSM=",
      "licenseCodes": Array [
        "5543610867827062957",
      ],
      "licenses": Array [
        "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-10-buster",
      ],
      "name": "j1-image3",
      "public": false,
      "rawDisk.containerType": undefined,
      "rawDisk.sha1Checksum": undefined,
      "rawDisk.source": undefined,
      "sourceDisk": undefined,
      "sourceDiskId": undefined,
      "sourceImage": undefined,
      "sourceImageId": undefined,
      "sourceSnapshot": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/snapshots/j1-snapshot",
      "sourceSnapshotId": "3150235893494643858",
      "sourceType": "RAW",
      "status": "READY",
      "storageLocations": Array [
        "us",
      ],
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "USES",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v3/regions/us-central1/clusters/cluster-6495",
      "_key": "projects/j1-gc-integration-dev-v3/regions/us-central1/clusters/cluster-6495|uses|https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/dataproc-image-sample",
      "_toEntityKey": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/dataproc-image-sample",
      "_type": "google_dataproc_cluster_uses_compute_image",
      "displayName": "USES",
    },
  ],
  "encounteredTypes": Array [
    "google_dataproc_cluster",
    "google_compute_image",
    "google_dataproc_cluster_uses_compute_image",
  ],
  "numCollectedEntities": 8,
  "numCollectedRelationships": 1,
}
`;

exports[`#fetchDataprocClusters should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:43.324630550Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478343324,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring",
      "location": "global",
      "name": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "example-topic-keyring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/global/example-topic-keyring/key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:42.998855757Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478342998,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring",
      "location": "us",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "example-keyring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/us/example-keyring/key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:43.452796640Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478343452,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring",
      "location": "us",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "j1-gc-integration-dev-v3-bucket-ring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/us/j1-gc-integration-dev-v3-bucket-ring/key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:42.750605992Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478342750,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring",
      "location": "us",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "j1-gc-integration-dev-v3-disk-bucket-ring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/us/j1-gc-integration-dev-v3-disk-bucket-ring/key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:42.389137569Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478342389,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
      "location": "us-central1",
      "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/us-central1/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Key",
        "CryptoKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:54.427526595Z",
            "destroyScheduledDuration": "86400s",
            "name": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key",
            "primary": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "createTime": "2021-05-31T16:25:54.427526595Z",
              "generateTime": "2021-05-31T16:25:54.427526595Z",
              "name": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key/cryptoKeyVersions/1",
              "protectionLevel": "SOFTWARE",
              "state": "ENABLED",
            },
            "purpose": "ENCRYPT_DECRYPT",
            "versionTemplate": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "protectionLevel": "SOFTWARE",
            },
          },
        },
      ],
      "_type": "google_kms_crypto_key",
      "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "createdOn": 1622478354427,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key",
      "keyUsage": "ENCRYPT_DECRYPT",
      "name": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key",
      "nextRotationTime": undefined,
      "primaryAlgorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "primaryCreateTime": 1622478354427,
      "primaryGenerateTime": 1622478354427,
      "primaryName": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key/cryptoKeyVersions/1",
      "primaryProtectionLevel": "SOFTWARE",
      "primaryState": "ENABLED",
      "protectionLevel": "SOFTWARE",
      "public": false,
      "purpose": "ENCRYPT_DECRYPT",
      "rotationPeriod": undefined,
      "webLink": "https://console.cloud.google.com/security/kms/key/manage/global/example-topic-keyring/projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Key",
        "CryptoKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:53.130589171Z",
            "destroyScheduledDuration": "86400s",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key",
            "primary": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "createTime": "2021-05-31T16:25:53.130589171Z",
              "generateTime": "2021-05-31T16:25:53.130589171Z",
              "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key/cryptoKeyVersions/1",
              "protectionLevel": "SOFTWARE",
              "state": "ENABLED",
            },
            "purpose": "ENCRYPT_DECRYPT",
            "versionTemplate": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "protectionLevel": "SOFTWARE",
            },
          },
        },
      ],
      "_type": "google_kms_crypto_key",
      "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "createdOn": 1622478353130,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key",
      "keyUsage": "ENCRYPT_DECRYPT",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key",
      "nextRotationTime": undefined,
      "primaryAlgorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "primaryCreateTime": 1622478353130,
      "primaryGenerateTime": 1622478353130,
      "primaryName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key/cryptoKeyVersions/1",
      "primaryProtectionLevel": "SOFTWARE",
      "primaryState": "ENABLED",
      "protectionLevel": "SOFTWARE",
      "public": false,
      "purpose": "ENCRYPT_DECRYPT",
      "rotationPeriod": undefined,
      "webLink": "https://console.cloud.google.com/security/kms/key/manage/us/example-keyring/projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Key",
        "CryptoKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:54.506981906Z",
            "destroyScheduledDuration": "86400s",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key",
            "nextRotationTime": "2021-08-13T16:27:15.822376Z",
            "primary": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "createTime": "2021-08-12T16:27:14.822376783Z",
              "generateTime": "2021-08-12T16:27:14.822376783Z",
              "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key/cryptoKeyVersions/74",
              "protectionLevel": "SOFTWARE",
              "state": "ENABLED",
            },
            "purpose": "ENCRYPT_DECRYPT",
            "rotationPeriod": "86401s",
            "versionTemplate": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "protectionLevel": "SOFTWARE",
            },
          },
        },
      ],
      "_type": "google_kms_crypto_key",
      "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "createdOn": 1622478354506,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key",
      "keyUsage": "ENCRYPT_DECRYPT",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key",
      "nextRotationTime": 1628872035822,
      "primaryAlgorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "primaryCreateTime": 1628785634822,
      "primaryGenerateTime": 1628785634822,
      "primaryName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key/cryptoKeyVersions/74",
      "primaryProtectionLevel": "SOFTWARE",
      "primaryState": "ENABLED",
      "protectionLevel": "SOFTWARE",
      "public": false,
      "purpose": "ENCRYPT_DECRYPT",
      "rotationPeriod": 86401,
      "webLink": "https://console.cloud.google.com/security/kms/key/manage/us/j1-gc-integration-dev-v3-bucket-ring/projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Key",
        "CryptoKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:52.740906673Z",
            "destroyScheduledDuration": "86400s",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key",
            "nextRotationTime": "2021-08-13T16:27:14.098076Z",
            "primary": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "createTime": "2021-08-12T16:27:13.098076182Z",
              "generateTime": "2021-08-12T16:27:13.098076182Z",
              "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key/cryptoKeyVersions/74",
              "protectionLevel": "SOFTWARE",
              "state": "ENABLED",
            },
            "purpose": "ENCRYPT_DECRYPT",
            "rotationPeriod": "86401s",
            "versionTemplate": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "protectionLevel": "SOFTWARE",
            },
          },
        },
      ],
      "_type": "google_kms_crypto_key",
      "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "createdOn": 1622478352740,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key",
      "keyUsage": "ENCRYPT_DECRYPT",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key",
      "nextRotationTime": 1628872034098,
      "primaryAlgorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "primaryCreateTime": 1628785633098,
      "primaryGenerateTime": 1628785633098,
      "primaryName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key/cryptoKeyVersions/74",
      "primaryProtectionLevel": "SOFTWARE",
      "primaryState": "ENABLED",
      "protectionLevel": "SOFTWARE",
      "public": false,
      "purpose": "ENCRYPT_DECRYPT",
      "rotationPeriod": 86401,
      "webLink": "https://console.cloud.google.com/security/kms/key/manage/us/j1-gc-integration-dev-v3-disk-bucket-ring/projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Key",
        "CryptoKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:43.794005568Z",
            "destroyScheduledDuration": "86400s",
            "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
            "nextRotationTime": "2021-08-13T16:27:05.120198Z",
            "primary": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "createTime": "2021-08-12T16:27:04.120198751Z",
              "generateTime": "2021-08-12T16:27:04.120198751Z",
              "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key/cryptoKeyVersions/74",
              "protectionLevel": "SOFTWARE",
              "state": "ENABLED",
            },
            "purpose": "ENCRYPT_DECRYPT",
            "rotationPeriod": "86401s",
            "versionTemplate": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "protectionLevel": "SOFTWARE",
            },
          },
        },
      ],
      "_type": "google_kms_crypto_key",
      "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "createdOn": 1622478343794,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
      "keyUsage": "ENCRYPT_DECRYPT",
      "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
      "nextRotationTime": 1628872025120,
      "primaryAlgorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "primaryCreateTime": 1628785624120,
      "primaryGenerateTime": 1628785624120,
      "primaryName": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key/cryptoKeyVersions/74",
      "primaryProtectionLevel": "SOFTWARE",
      "primaryState": "ENABLED",
      "protectionLevel": "SOFTWARE",
      "public": false,
      "purpose": "ENCRYPT_DECRYPT",
      "rotationPeriod": 86401,
      "webLink": "https://console.cloud.google.com/security/kms/key/manage/us-central1/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Cluster",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/regions/us-central1/clusters/cluster-6495",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "clusterName": "cluster-6495",
            "clusterUuid": "ef6307df-d7f4-4b6d-9d12-bf9d481f6d72",
            "config": Object {
              "configBucket": "dataproc-staging-us-central1-167984947943-okmnuod7",
              "encryptionConfig": Object {},
              "endpointConfig": Object {},
              "gceClusterConfig": Object {
                "networkUri": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/networks/default",
                "serviceAccountScopes": Array [
                  "https://www.googleapis.com/auth/bigquery",
                  "https://www.googleapis.com/auth/bigtable.admin.table",
                  "https://www.googleapis.com/auth/bigtable.data",
                  "https://www.googleapis.com/auth/cloud.useraccounts.readonly",
                  "https://www.googleapis.com/auth/devstorage.full_control",
                  "https://www.googleapis.com/auth/devstorage.read_write",
                  "https://www.googleapis.com/auth/logging.write",
                ],
                "shieldedInstanceConfig": Object {},
                "zoneUri": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/zones/us-central1-b",
              },
              "masterConfig": Object {
                "diskConfig": Object {
                  "bootDiskSizeGb": 500,
                  "bootDiskType": "pd-standard",
                },
                "imageUri": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/dataproc-image-sample",
                "instanceNames": Array [
                  "cluster-6495-m",
                ],
                "machineTypeUri": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/zones/us-central1-b/machineTypes/n1-standard-4",
                "minCpuPlatform": "AUTOMATIC",
                "numInstances": 1,
                "preemptibility": "NON_PREEMPTIBLE",
              },
              "securityConfig": Object {
                "kerberosConfig": Object {},
              },
              "softwareConfig": Object {
                "imageVersion": "2.0.14-debian10",
                "properties": Object {
                  "capacity-scheduler:yarn.scheduler.capacity.root.default.ordering-policy": "fair",
                  "core:fs.gs.block.size": "134217728",
                  "core:fs.gs.metadata.cache.enable": "false",
                  "core:hadoop.ssl.enabled.protocols": "TLSv1,TLSv1.1,TLSv1.2",
                  "distcp:mapreduce.map.java.opts": "-Xmx768m",
                  "distcp:mapreduce.map.memory.mb": "1024",
                  "distcp:mapreduce.reduce.java.opts": "-Xmx768m",
                  "distcp:mapreduce.reduce.memory.mb": "1024",
                  "hadoop-env:HADOOP_DATANODE_OPTS": "-Xmx512m",
                  "hdfs:dfs.datanode.address": "0.0.0.0:9866",
                  "hdfs:dfs.datanode.http.address": "0.0.0.0:9864",
                  "hdfs:dfs.datanode.https.address": "0.0.0.0:9865",
                  "hdfs:dfs.datanode.ipc.address": "0.0.0.0:9867",
                  "hdfs:dfs.namenode.handler.count": "20",
                  "hdfs:dfs.namenode.http-address": "0.0.0.0:9870",
                  "hdfs:dfs.namenode.https-address": "0.0.0.0:9871",
                  "hdfs:dfs.namenode.lifeline.rpc-address": "cluster-6495-m:8050",
                  "hdfs:dfs.namenode.secondary.http-address": "0.0.0.0:9868",
                  "hdfs:dfs.namenode.secondary.https-address": "0.0.0.0:9869",
                  "hdfs:dfs.namenode.service.handler.count": "10",
                  "hdfs:dfs.namenode.servicerpc-address": "cluster-6495-m:8051",
                  "hive:hive.fetch.task.conversion": "none",
                  "mapred-env:HADOOP_JOB_HISTORYSERVER_HEAPSIZE": "3840",
                  "mapred:mapreduce.job.maps": "21",
                  "mapred:mapreduce.job.reduce.slowstart.completedmaps": "0.95",
                  "mapred:mapreduce.job.reduces": "7",
                  "mapred:mapreduce.jobhistory.recovery.store.class": "org.apache.hadoop.mapreduce.v2.hs.HistoryServerLeveldbStateStoreService",
                  "mapred:mapreduce.map.cpu.vcores": "1",
                  "mapred:mapreduce.map.java.opts": "-Xmx2524m",
                  "mapred:mapreduce.map.memory.mb": "3156",
                  "mapred:mapreduce.reduce.cpu.vcores": "1",
                  "mapred:mapreduce.reduce.java.opts": "-Xmx2524m",
                  "mapred:mapreduce.reduce.memory.mb": "3156",
                  "mapred:mapreduce.task.io.sort.mb": "256",
                  "mapred:yarn.app.mapreduce.am.command-opts": "-Xmx2524m",
                  "mapred:yarn.app.mapreduce.am.resource.cpu-vcores": "1",
                  "mapred:yarn.app.mapreduce.am.resource.mb": "3156",
                  "spark-env:SPARK_DAEMON_MEMORY": "3840m",
                  "spark:spark.driver.maxResultSize": "1920m",
                  "spark:spark.driver.memory": "3840m",
                  "spark:spark.executor.cores": "2",
                  "spark:spark.executor.instances": "2",
                  "spark:spark.executor.memory": "5739m",
                  "spark:spark.executorEnv.OPENBLAS_NUM_THREADS": "1",
                  "spark:spark.scheduler.mode": "FAIR",
                  "spark:spark.sql.cbo.enabled": "true",
                  "spark:spark.ui.port": "0",
                  "spark:spark.yarn.am.memory": "640m",
                  "yarn-env:YARN_NODEMANAGER_HEAPSIZE": "1536",
                  "yarn-env:YARN_RESOURCEMANAGER_HEAPSIZE": "3840",
                  "yarn-env:YARN_TIMELINESERVER_HEAPSIZE": "3840",
                  "yarn:yarn.nodemanager.address": "0.0.0.0:8026",
                  "yarn:yarn.nodemanager.resource.cpu-vcores": "4",
                  "yarn:yarn.nodemanager.resource.memory-mb": "12624",
                  "yarn:yarn.resourcemanager.nodemanager-graceful-decommission-timeout-secs": "86400",
                  "yarn:yarn.scheduler.maximum-allocation-mb": "12624",
                  "yarn:yarn.scheduler.minimum-allocation-mb": "1",
                },
              },
              "tempBucket": "dataproc-temp-us-central1-167984947943-c8nlqeyo",
              "workerConfig": Object {
                "diskConfig": Object {
                  "bootDiskSizeGb": 500,
                  "bootDiskType": "pd-standard",
                },
                "imageUri": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/dataproc-image-sample",
                "instanceNames": Array [
                  "cluster-6495-w-0",
                  "cluster-6495-w-1",
                ],
                "machineTypeUri": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/zones/us-central1-b/machineTypes/n1-standard-4",
                "minCpuPlatform": "AUTOMATIC",
                "numInstances": 2,
                "preemptibility": "NON_PREEMPTIBLE",
              },
            },
            "labels": Object {
              "goog-dataproc-cluster-name": "cluster-6495",
              "goog-dataproc-cluster-uuid": "ef6307df-d7f4-4b6d-9d12-bf9d481f6d72",
              "goog-dataproc-location": "us-central1",
            },
            "metrics": Object {
              "hdfsMetrics": Object {
                "dfs-blocks-corrupt": "0",
                "dfs-blocks-missing": "0",
                "dfs-blocks-missing-repl-one": "0",
                "dfs-blocks-pending-deletion": "0",
                "dfs-blocks-under-replication": "0",
                "dfs-capacity-present": "988020613120",
                "dfs-capacity-remaining": "988020555776",
                "dfs-capacity-total": "1056489095168",
                "dfs-capacity-used": "57344",
                "dfs-nodes-decommissioned": "0",
                "dfs-nodes-decommissioning": "0",
                "dfs-nodes-running": "2",
              },
              "yarnMetrics": Object {
                "yarn-apps-completed": "0",
                "yarn-apps-failed": "0",
                "yarn-apps-killed": "0",
                "yarn-apps-pending": "0",
                "yarn-apps-running": "0",
                "yarn-apps-submitted": "0",
                "yarn-containers-allocated": "0",
                "yarn-containers-pending": "0",
                "yarn-containers-reserved": "0",
                "yarn-memory-mb-allocated": "0",
                "yarn-memory-mb-available": "25248",
                "yarn-memory-mb-pending": "0",
                "yarn-memory-mb-reserved": "0",
                "yarn-memory-mb-total": "25248",
                "yarn-nodes-active": "2",
                "yarn-nodes-decommissioned": "0",
                "yarn-nodes-lost": "0",
                "yarn-nodes-rebooted": "0",
                "yarn-nodes-unhealthy": "0",
                "yarn-vcores-allocated": "0",
                "yarn-vcores-available": "8",
                "yarn-vcores-pending": "0",
                "yarn-vcores-reserved": "0",
                "yarn-vcores-total": "8",
              },
            },
            "projectId": "j1-gc-integration-dev-v3",
            "status": Object {
              "state": "RUNNING",
              "stateStartTime": "2021-08-13T10:24:53.114077Z",
            },
            "statusHistory": Array [
              Object {
                "state": "CREATING",
                "stateStartTime": "2021-08-13T10:22:16.636450Z",
              },
            ],
          },
        },
      ],
      "_type": "google_dataproc_cluster",
      "active": true,
      "configBucket": "dataproc-staging-us-central1-167984947943-okmnuod7",
      "createdOn": undefined,
      "crossRealmTrustAdminServer": undefined,
      "crossRealmTrustKdc": undefined,
      "crossRealmTrustRealm": undefined,
      "crossRealmTrustSharedPasswordUri": undefined,
      "displayName": "cluster-6495",
      "enableKerberos": undefined,
      "encrypted": true,
      "id": "ef6307df-d7f4-4b6d-9d12-bf9d481f6d72",
      "kdcDbKeyUri": undefined,
      "keyPasswordUri": undefined,
      "keystorePasswordUri": undefined,
      "keystoreUri": undefined,
      "kmsKeyName": undefined,
      "kmsKeyUri": undefined,
      "masterConfigImageUri": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/dataproc-image-sample",
      "masterConfigMachineTypeUri": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/zones/us-central1-b/machineTypes/n1-standard-4",
      "masterConfigMinCpuPlatform": "AUTOMATIC",
      "masterConfigNumInstances": 1,
      "masterConfigPreemptibility": "NON_PREEMPTIBLE",
      "name": "cluster-6495",
      "networkUri": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/networks/default",
      "realm": undefined,
      "rootPrincipalPasswordUri": undefined,
      "softwareConfigImageVersion": "2.0.14-debian10",
      "status": "RUNNING",
      "tag.goog-dataproc-cluster-name": "cluster-6495",
      "tag.goog-dataproc-cluster-uuid": "ef6307df-d7f4-4b6d-9d12-bf9d481f6d72",
      "tag.goog-dataproc-location": "us-central1",
      "tempBucket": "dataproc-temp-us-central1-167984947943-c8nlqeyo",
      "tgtLifetimeHours": undefined,
      "truststorePasswordUri": undefined,
      "truststoreUri": undefined,
      "webLink": "https://console.cloud.google.com/dataproc/clusters/cluster-6495/monitoring?region=us-central1&project=j1-gc-integration-dev-v3",
      "workerConfigImageUri": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/images/dataproc-image-sample",
      "workerConfigMachineTypeUri": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/zones/us-central1-b/machineTypes/n1-standard-4",
      "workerConfigMinCpuPlatform": "AUTOMATIC",
      "workerConfigNumInstances": 2,
      "workerConfigPreemptibility": "NON_PREEMPTIBLE",
      "zoneUri": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/zones/us-central1-b",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring",
      "_key": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring|has|projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key",
      "_type": "google_kms_key_ring_has_crypto_key",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring",
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring|has|projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key",
      "_type": "google_kms_key_ring_has_crypto_key",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring",
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring|has|projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key",
      "_type": "google_kms_key_ring_has_crypto_key",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring",
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring|has|projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key",
      "_type": "google_kms_key_ring_has_crypto_key",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
      "_key": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring|has|projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
      "_type": "google_kms_key_ring_has_crypto_key",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "google_kms_key_ring",
    "google_kms_crypto_key",
    "google_kms_key_ring_has_crypto_key",
    "google_dataproc_cluster",
  ],
  "numCollectedEntities": 11,
  "numCollectedRelationships": 5,
}
`;
